fix(#50): 중복 게시물 장소 정보 병합